@@ -78,10 +78,10 @@ sub import {
       next if $added_class_name =~ /::anon/;
       
       # Build Precompile classs - Compile C source codes and link them to SPVM precompile method
-      $BUILDER->build_and_bind_shared_lib($added_class_name, 'precompile');
+      $BUILDER->build_and_bind_dynamic_lib($added_class_name, 'precompile');
       
       # Build native classs - Compile C source codes and link them to SPVM native method
-      $BUILDER->build_and_bind_shared_lib($added_class_name, 'native');
+      $BUILDER->build_and_bind_dynamic_lib($added_class_name, 'native');
     }
   }
 }
